--- a/index.css
+++ b/index.css
@@ -30,6 +30,10 @@ body{
     display: flex;
     flex-direction: row;
     position: relative;
+    @media (min-width: 300px)  and (max-width: 992px){
+
+    background-color: #f8f4f0;
+    }
    
   
 
