--- a/src/index.css
+++ b/src/index.css
@@ -109,6 +109,7 @@ margin-right: 15px;
     @media (min-width: 300px)  and (max-width: 992px)  {
         font-size: 20px;
         margin-left: 0px;
+        margin-bottom: 15px;
       
     } 
     
@@ -131,6 +132,7 @@ align-items: center;
  @media (min-width: 300px)  and (max-width: 992px)  {
     font-size: 20px;
     color: #aa571c;
+    margin-bottom: 8px;
    
    
  
