--- a/src/adminPages/Home.css
+++ b/src/adminPages/Home.css
@@ -16,6 +16,7 @@
   font-weight: bolder;
   color: #41362d;
   @media (min-width: 300px)  and (max-width: 992px)   {
+    width: 100%; 
 font-size: small;
 padding: 0;
 font-weight: bold;
