--- a/src/components/globalBars/registerfile.css
+++ b/src/components/globalBars/registerfile.css
@@ -2,7 +2,7 @@
     width: 90%;
     height: 100vh;
     padding: 30px;
-    background-color: #f8f4f0;
+/*     background-color: #f8f4f0; */
 
 }
 
