--- a/src/adminPages/Home.css
+++ b/src/adminPages/Home.css
@@ -3,7 +3,7 @@
   height: 140vh;
   display: flex;
   flex-direction: column;
-   background-color: #f8f4f0;
+/*    background-color: #f8f4f0; */
 }
 .mainhomepage h2 {
   color: #bc6c25;
